# tinychannels

./: .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  prompt.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: porting.md
docs/spec/: README.md  openclaw-hermes-channel-porting.md  tinychannels-execution-plan.md  tinychannels-migration-remaining-plan.md
src/: backend.rs  config.rs  config_tests.rs  context.rs  error.rs  lib.rs  routes.rs  runtime.rs  security.rs  traits.rs
src/adapters/: local.rs  mod.rs  test.rs
src/channel/: adapter.rs  capabilities.rs  envelope.rs  error.rs  intent.rs  mod.rs  receipt.rs  session.rs  test.rs  types.rs
src/controllers/: credentials.rs  credentials_tests.rs  definitions.rs  definitions_tests.rs  mod.rs  schemas.rs  types.rs
src/delivery/: mod.rs  policy.rs  queue.rs  test.rs  types.rs
src/harness/: bridge.rs  mod.rs  test.rs  types.rs
src/host/: dispatch.rs  mod.rs  noop.rs  services.rs  tests.rs
src/providers/: dingtalk.rs  email_channel.rs  imessage.rs  imessage_tests.rs  irc.rs  irc_tests.rs  lark.rs  lark_tests.rs  linq.rs  linq_tests.rs  mattermost.rs  mattermost_tests.rs  mod.rs  qq.rs  qq_tests.rs  signal.rs  signal_tests.rs  slack.rs  whatsapp.rs  whatsapp_tests.rs  whatsapp_web.rs  whatsapp_web_tests.rs
src/providers/discord/: api.rs  api_tests.rs  channel.rs  channel_tests.rs  mod.rs
src/providers/telegram/: attachments.rs  channel.rs  channel_core.rs  channel_ops.rs  channel_recv.rs  channel_send.rs  channel_tests.rs  channel_types.rs  mod.rs  session_store.rs  text.rs
src/providers/yuanbao/: channel.rs  config.rs  connection.rs  cos.rs  errors.rs  ids.rs  inbound.rs  media.rs  mod.rs  outbound.rs  proto.rs  proto_biz.rs  proto_constants.rs  sign.rs  splitter.rs  types.rs  wire.rs
src/relay/: actions.rs  auth.rs  descriptor.rs  frames.rs  mod.rs  test.rs  transport.rs  websocket.rs
src/text/: mod.rs  test.rs
